Fri May 14 22:22:33 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * ace/OS_NS_Thread.cpp:

          Added another #ifdef guard around ace_wb_exec(), since it's not
          appropriate for all use cases (see Fri Mar 19 13:23:18 UTC 2010).

Thu May 13 21:47:59 UTC 2010  Thomas Girard  <thomas.g.girard@free.fr>

        * ace/ace_qt4reactor.mpc:
          Explicit the file on which moc must operate. This removes a warning
          during ACE_QtReactor build when moc was invoked.

Wed May 12 08:38:50 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * examples/Timer_Queue/Custom_Handler.h:
        * examples/Timer_Queue/Custom_Handler.cpp:
        * examples/Timer_Queue/Timer_Queue.mpc:
          Custom_Handler wasn't a template so removed
          all template declarations. This should resolve
          the static link issues on the scoreboard.

Tue May 11 06:52:16 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * examples/Timer_Queue/Custom_Handler.h:
        * examples/Timer_Queue/Custom_Handler.cpp:
          Layout changes. Resolved linker errors on static
          windows builds.

Fri May  7 09:07:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Timer_Queue/Custom_Handler.h:
        * examples/Timer_Queue/Custom_Handler.cpp:
          Fixed gcc warnings

Thu May  6 12:48:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Timer_Queue/Reactor_Timer_Queue_Test.cpp:
        * examples/Timer_Queue/Thread_Timer_Queue_Custom_Handler_Test.cpp:
        * examples/Timer_Queue/Thread_Timer_Queue_Test.cpp:
          Fixed fuzz and removed some not used arguments

Thu May  6 12:01:16 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Timer_Queue/Async_Timer_Queue_Test.h:
        * examples/Timer_Queue/Async_Timer_Queue_Test.cpp:
        * examples/Timer_Queue/Custom_Handler.h:
        * examples/Timer_Queue/Custom_Handler.cpp:
        * examples/Timer_Queue/Driver.h: